# Medical-Artificial-Intelligence-Platform

./: README.md  benchmark_evaluation.py  proper_benchmark_test.py  real_benchmark_test.py
LLM_join/: LLM_join.py  requirements.txt
LLM_join/ClovaX_0.5B/: clovaX_ioin.py  requirments.txt
LLM_join/deepseekr1_8b/: deepseek_join.py
LLM_join/llama3.2_bllossom/: llama3.2_join.py  requirments.txt
VectorStore2/: VectorStore_Bio_ClinicalBERT_Main.ipynb  VectorStore_Gemini_Main.ipynb  multilingual-e5-large.ipynb
VectorStore2/search_results/: search_2025년_흉통환자인데_여성_20250523_204744.txt  search_가장_최근에_방문한_고혈압_환자_20250522_205140.txt  search_가장_최근에_온_골정환자_진료차트를_보여줘_20250522_205049.txt  search_흉통이_있는_환자가_복용한_약_20250522_234931.txt
VectorStore2/vector_stores/medical_vector_store_e5/: index.pkl
VectorStore2/vector_stores/medical_vector_store_e5_full/: index.pkl
VectorStore2/vector_stores/medical_vector_store_e5_unified/: index.pkl
VectorStore2/vector_stores2/medical_vector_store_e5/: index.pkl
VectorStore2/vector_stores_BERT/medical_vector_store_clinical_bert/: index.pkl
hi_medei/demo_clovax_05/ui/: pyproject.toml  test_medical_image.py
hi_medei/demo_clovax_05/ui/components/: conversation.py  conversation_list.py  page_scaffold.py  poller.py
hi_medei/demo_clovax_05/ui/service/server/: adk_host_manager.py
hi_medei/demo_clovax_05/ui/state/: state.py
hi_medei/demo_clovax_05/ui/utils/: agent_card.py
hi_medei/demo_llm/ui/service/server/: adk_host_manager.py
hi_medei/samples/python/agents/: README.md
hi_medei/samples/python/agents/langgraph/: __main__.py  agent.py  standalone_main.py  task_manager.py
hi_medei/samples/python/agents/masking_agent/: README.md  requirements.txt
hi_medei/samples/python/agents/masking_agent/a2a/: agent.yaml
hi_medei/samples/python/agents/masking_agent/app/: main.py
hi_medei/samples/python/agents/medical_agent/: README.md  __init__.py  __main__.py  agent.py  debug_invoke.py  debug_query.py  debug_search.py  env_example.txt  mcp_client.py  mcp_config.py  medical_memory_8081.db  medical_tools.py  models.py  pyproject.toml  requirements_complete.txt  requirements_mcp.txt  start_all.py  start_mcp_servers.py  task_manager.py  test_agent.py  test_agent_mcp.py  test_agent_simple.py  test_mcp_connection.py  test_mcp_integration.py  test_vector.py
hi_medei/samples/python/agents/medical_agent/mcp_servers/: __init__.py  memory_server.py  pubmed_server.py  startup.py
hi_medei/samples/python/agents/medical_image_agent/: README.md  __init__.py  __main__.py  agent.py  models.py  pyproject.toml  radiology_worklist.db  requirements.txt  simple_vision_pipeline.py  task_manager.py
